<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.slings.vasantham.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
     <!--   <action
            android:id="@+id/applyLeaveButton"
            app:destination="@id/navigation2" />-->
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.slings.vasantham.ui.CalendarLog.CalendarLogFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_permission"
        android:name="com.slings.vasantham.ui.permission.PermissionFragment"
        android:label="@string/permission"
        tools:layout="@layout/permission_fragment" />

    <fragment
        android:id="@+id/nav_profilefragment"
        android:name="com.slings.vasantham.ui.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/profile" />

    <fragment
        android:id="@+id/nav_profileeditfragment"
        android:name="com.slings.vasantham.ui.ProfileEditFragment"
        android:label="Profile Edit"
        tools:layout="@layout/profile_edit" />

    <fragment
        android:id="@+id/nav_usersfragment"
        android:name="com.slings.vasantham.admin.AdminUsersFragment"
        android:label="Users List"
        tools:layout="@layout/admin_user_list" />

    <fragment
        android:id="@+id/nav_designfragment"
        android:name="com.slings.vasantham.admin.AdminCreateDesignFragment"
        android:label="Create Designation"
        tools:layout="@layout/admin_create_design" />

    <fragment
        android:id="@+id/nav_shiftfragment"
        android:name="com.slings.vasantham.admin.AdminShiftViewFragment"
        android:label="Shift"
        tools:layout="@layout/admin_user_list" />

    <fragment
        android:id="@+id/nav_create_user_fragment"
        android:name="com.slings.vasantham.admin.AdminCreateUserFragment"
        android:label="User Shift"
        tools:layout="@layout/admin_create_user" />

    <fragment
        android:id="@+id/nav_create_shiftfragment"
        android:name="com.slings.vasantham.admin.AdminCreateShiftFragment"
        android:label="User Shift"
        tools:layout="@layout/admin_user_list" />

    <fragment
        android:id="@+id/nav_admin_user_dashboardfragment"
        android:name="com.slings.vasantham.admin.AdminDashFragment"
        android:label="Profile"
        tools:layout="@layout/admin_dashboard" />

    <fragment
        android:id="@+id/nav_leave"
        android:name="com.slings.vasantham.ApplyLeaveFrament"
        android:label="@string/apply_leave"
        tools:layout="@layout/apply_leave" />

    <fragment
        android:id="@+id/nav_attendance"
        android:name="com.slings.vasantham.ui.attendance.AttendanceFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/attendance_fragment" />

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.slings.vasantham.ui.attendance.AttendanceFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/attendance_fragment" />


    <!-- <navigation android:id="@+id/navigation2"
         app:startDestination="@id/navigation">
         <navigation
             android:id="@+id/navigation"
             app:startDestination="@id/nav_attendance">-->

       <!-- </navigation>
    </navigation>-->

</navigation>