<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".NoInternetActivity">

    <LinearLayout
        android:id="@+id/linear_no_connection_available"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/no_internet" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/internet_not_connect_tex"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/Retry_to_connect" />

        <TextView
            android:id="@+id/error_page_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/Retry_button_text"
            android:textStyle="bold"
            android:textColor="@color/theme_blue"
            android:textAllCaps="false" />

    </LinearLayout>

    <Button
        android:id="@+id/btnExplicitBroadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Explicit Broadcast"
        android:visibility="gone" />

</RelativeLayout>