<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/profile_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/menu_user_profile" />

        <TextView
            android:id="@+id/atten_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toRightOf="@+id/imageView"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:fontFamily="@font/poppins_black"
            android:text="@string/sample_name"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/atten_desgn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/atten_name"
            android:paddingBottom="@dimen/nav_header_vertical_spacing"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toRightOf="@+id/imageView"
            android:text="@string/sample_designation"
            android:textColor="@color/black" />
    </RelativeLayout>

    <com.applandeo.materialcalendarview.CalendarView
       android:id="@+id/calendarview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_layer"/>


    <LinearLayout
        android:id="@+id/calendarview_legends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/calendarview"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_gravity="center"
                android:src="@drawable/dot_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="Leave"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:src="@drawable/dot_green"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="Present"/>

    </LinearLayout>
        <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"
            android:src="@drawable/dot_orange"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="Permission"/>
    </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/textViewCurrentTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="start"
        android:lineSpacingExtra="@dimen/_5sdp"
        android:text="Today RaviKumar is working"
        app:layout_constraintTop_toBottomOf="@+id/calendarview_legends"
        android:layout_margin="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="14sp" />
</androidx.constraintlayout.widget.ConstraintLayout>