<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FCFCFC">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#FCFCFC">

    <RelativeLayout
        android:id="@+id/profile_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="#FCFCFC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/menu_user_profile" />

        <TextView
            android:id="@+id/atten_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toRightOf="@+id/imageView"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:fontFamily="@font/poppins_black"
            android:text="@string/sample_name"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/atten_desgn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/atten_name"
            android:paddingBottom="@dimen/nav_header_vertical_spacing"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toRightOf="@+id/imageView"
            android:text="@string/sample_designation"
            android:textColor="@color/black" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/uv_main_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_5sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/profile_layer">

    <LinearLayout
        android:id="@+id/salary_layer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingTop="@dimen/_5sdp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/profile_layer"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="@dimen/_5sdp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="Primary Details"
            android:textColor="@color/font_color"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColorHint="@android:color/darker_gray"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="Emp ID"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/font_title_color"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="18/12/2023"
            android:textColor="@color/font_content_color"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:paddingTop="@dimen/edit_box_padding_top"
            android:paddingBottom="@dimen/edit_box_padding_bottom"
            android:textSize="@dimen/ad_user_view_edit_et_txsize"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColorHint="@android:color/darker_gray" />
        <View
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider_line"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/pro_top_section"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="Email"
            android:textColor="@color/font_title_color"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="Ravikumar@gmail.com"
            android:textColor="@color/font_content_color"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:paddingTop="@dimen/edit_box_padding_top"
            android:paddingBottom="@dimen/edit_box_padding_bottom"
            android:textSize="@dimen/ad_user_view_edit_et_txsize"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColorHint="@android:color/darker_gray" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider_line"
            app:layout_constraintTop_toBottomOf="@+id/pro_top_section"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="Mobile"
            android:textColor="@color/font_title_color"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColorHint="@android:color/darker_gray" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="+91 9876543210"
            android:textColor="@color/font_color"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:paddingTop="@dimen/edit_box_padding_top"
            android:paddingBottom="@dimen/edit_box_padding_bottom"
            android:textSize="@dimen/ad_user_view_edit_et_txsize"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColorHint="@android:color/darker_gray" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@color/divider_line"
            app:layout_constraintTop_toBottomOf="@+id/pro_top_section"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="Gender"
            android:textColor="@color/font_title_color"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColorHint="@android:color/darker_gray" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="Male"
            android:background="@null"
            android:textColor="@color/font_color"
            android:paddingTop="@dimen/edit_box_padding_top"
            android:paddingBottom="@dimen/edit_box_padding_bottom"
            android:textSize="@dimen/ad_user_view_edit_et_txsize"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider_line"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/pro_top_section"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="DOB"
            android:textColor="@color/font_title_color"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="18/12/2023"
            android:background="@null"
            android:paddingTop="@dimen/edit_box_padding_top"
            android:paddingBottom="@dimen/edit_box_padding_bottom"
            android:textSize="@dimen/ad_user_view_edit_et_txsize"
            android:textColor="@color/font_color"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColorHint="@android:color/darker_gray" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider_line"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/pro_top_section"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="Shift"
            android:textColor="@color/font_title_color"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="Day Shift"
            android:background="@null"
            android:paddingTop="@dimen/edit_box_padding_top"
            android:paddingBottom="@dimen/edit_box_padding_bottom"
            android:textSize="@dimen/ad_user_view_edit_et_txsize"
            android:textColor="@color/font_color"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColorHint="@android:color/darker_gray" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider_line"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/pro_top_section"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="New Password"
            android:textColor="@color/font_title_color"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="ravi@1997"
            android:textColor="@color/font_color"
            android:background="@null"
            android:paddingTop="@dimen/edit_box_padding_top"
            android:paddingBottom="@dimen/edit_box_padding_bottom"
            android:textSize="@dimen/ad_user_view_edit_et_txsize"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColorHint="@android:color/darker_gray" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@color/divider_line"
            app:layout_constraintTop_toBottomOf="@+id/pro_top_section"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="Date of Joining"
            android:textColor="@color/font_title_color"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="01/05/1991"
            android:textColor="@color/font_color"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@null"
            android:paddingTop="@dimen/edit_box_padding_top"
            android:paddingBottom="@dimen/edit_box_padding_bottom"
            android:textSize="@dimen/ad_user_view_edit_et_txsize"
            android:textColorHint="@android:color/darker_gray" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider_line"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/pro_top_section"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="Status"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="@color/font_title_color" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoImageView"
            android:text="None"
            android:textColor="@color/font_color"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:paddingTop="@dimen/edit_box_padding_top"
            android:paddingBottom="@dimen/edit_box_padding_bottom"
            android:textSize="@dimen/ad_user_view_edit_et_txsize"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColorHint="@android:color/darker_gray" />
    </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
    android:id="@+id/uv_salary_layer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_5sdp"
     android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"

     app:layout_constraintTop_toBottomOf="@+id/profile_layer">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingTop="@dimen/_5sdp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/uv_main_layer"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="@dimen/_5sdp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImageView"
        android:text="Salary"
        android:textColor="@color/font_color"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/_10sdp"
        android:textColorHint="@android:color/darker_gray"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImageView"
        android:text="In Hand-Salary"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/_10sdp"
        android:textColor="@color/font_title_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImageView"
        android:text="₹15,460"
        android:textColor="@color/font_color"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/_10sdp"
        android:textColorHint="@android:color/darker_gray" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>